--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,7 +393,7 @@ h6 {
   width: 100%;
   height: 100vh;
   position: relative;
-  background: #f5f8fd url("../img/intro-bg.jpg") center top no-repeat;
+  background: lavender;
   background-size: cover;
   padding-top: 110px;
 }
