--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,13 @@ h6 {
 }
 
 @media (max-width: 424px) {
-  .logo img {
+  .well-mix {
+    display: none;
+  }
+}
+@media (min-width: 424px) {
+  .mobile-mix,
+  .hero-mix {
     display: none;
   }
 }
