--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,11 +303,18 @@ h6 {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 424px) {
   .well-mix {
     display: none;
   }
 }
+
+@media (min-width: 200px) {
+  .well-mix {
+    display: none;
+  }
+}
+
 @media (min-width: 424px) {
   .mobile-mix,
   .hero-mix {
