--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,8 +309,15 @@ h6 {
   }
 }
 
-@media (min-width: 200px) {
+@media (max-width: 750) {
   .well-mix {
+    display: none;
+  }
+}
+
+@media (min-width: 750px) {
+  .mobile-mix,
+  .hero-mix {
     display: none;
   }
 }
